# Stellar

./: .gitignore  01-que-lograste-hoy.md  02-javascript-stellar.md  03-terminal-y-cli.md  04-smart-contracts-completo.md  04-smart-contracts.md  05-tarea-y-proximos-pasos.md  06-tarea-clase-2.md  README.md  REVISION-FINAL-100-PORCIENTO.md  SEMANA-2.md  airdrop.js  calculadora-fees.js  consultar-balance.js  crear-cuenta-mejorado.js  crear-cuenta.js  crear-multiples-cuentas.js  cuentas-stellar-testnet.md  ejercicio-1-creacion-masiva.js  ejercicio-2-pagos-automatizados.js  ejercicio-2-pagos.js  ejercicio-3-monitor-balances.js  ejercicio-3-monitor.js  ejercicio-4-setup-proyecto.js  ejercicio-terminal-batch.js  ejercicio-terminal-monitoreo.js  ejercicio-terminal-setup.js  enviar-pago-dotenv.js  enviar-pago-mejorado.js  enviar-pago.js  invoke-contract.js  invoke-many.js  medir-tiempo.js  mi-wallet.js  monitor-balance.js  package-lock.json  package.json  stellar-clase1-llaves.txt
rust-ejercicios/: .gitignore  CHECKLIST.md  CODIGO-EXPLICADO.md  CONTADOR-README.md  Cargo.toml  EJERCICIOS-PRACTICA-README.md  INSTRUCCIONES.md  README.md  TRAITS-README.md  VERIFICACION-EJERCICIOS-PRACTICA.md  VERIFICACION-FINAL.md  VERIFICACION-HELLO-TIBURONA.md  VERIFICACION-RESULT-OPTION.md  VERIFICACION-STORAGE-PATTERNS.md  VERIFICACION-TRAITS.md
rust-ejercicios/src/: contador.rs  ejercicios_errores.rs  ejercicios_practica.rs  ejercicios_practica_test.rs  hello_tiburona.rs  hello_tiburona_test.rs  lib.rs  result_option_ejemplos.rs  result_option_ejemplos_test.rs  storage_patterns.rs  test.rs  (+3 more)
(+3 files in other folders)
